Changed the style of the demo assignment 1 layout - prioirity cleaned up - progress bar demo added - due date added - corrected some spacing

--- a/BasicHome.css
+++ b/BasicHome.css
@@ -155,55 +155,59 @@
 }
 .AssignmentPriority{
     float: left;
-    margin-left: 0px;
+    margin: 10px;
+    margin-top: 3px;
+    margin-bottom: 3px;
     font-size: 12px;
     background-color: rgb(255, 255, 255);
-    width: 60px;
+    width: 80px;
     cursor: pointer;
     color: rgb(0, 0, 0);
     border: 3px solid rgb(125, 174, 231);
     border-radius: 10px;
+    text-align: center;
+    padding: 2px;
 }
 .AssignmentName{
     float: left;
+    margin: 10px;
+    margin-left: -20px;
+    margin-top: 3px;
+    margin-bottom: 3px;
+    width: 30%;
+    padding: 2px;
+    padding-left: 10px;
+    margin-right: 1%;
+
+    border: 3px solid rgb(138, 138, 138);
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+    text-align: center;
+    outline: none;
+    font-size: 12px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.AssignmentDuedate{
+    float: left;
+    width: 15%;
     margin: 10px;
     margin-top: 3px;
     margin-bottom: 3px;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
     cursor: pointer;
-    width: 30%;
     padding: 2px;
-    
-    margin-left: 1%;
-    margin-right: 1%;
-    border: none;
-    text-align: center;
-    outline: none;
-    font-size: 15px;
-    border: 3px solid rgb(138, 138, 138);
-    border-radius: 10px;
-}
-.AssignmentDuedate{
-    float: left;
-    width: 20%;
-    margin: 15px;
-    margin-top: 7px;
-    margin-bottom: 7px;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    cursor: pointer;
-    padding: 15px;
     margin-left: 1%;
     margin-right: 1%;
     border: none;
     text-align: center;
     outline: none;
     font-size: 12px;
-    border: 2px solid rgb(138, 138, 138);
+    border: 3px solid rgb(138, 138, 138);
     border-radius: 10px;
 }
-
 
 
 .AssignmentOutline{
@@ -269,6 +273,9 @@
     outline: none;
     font-size: 15px;
 }
+
+
+
 
 .AssignmentDetails{
     
